# permits

./: .env.example  .gitignore  README.md  amplify.yml  compose.yaml
.github/workflows/: build-images.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_local_hu.py
backend/src/permits/: api.py  backup.py  config.py  db.py  fetch.py  logging_handler.py  main.py  models.py  schemas.py  usage_types.py
backend/src/permits/enrich/: budapest.py  client_name.py  http.py  oeny.py  osm.py  parse.py  qlever.py  tz.py  wikidata.py
backend/tests/: test_enrich.py
frontend/: Dockerfile  amplify.yml  index.html  package.json  pnpm-lock.yaml
frontend/public/OSM/fonts/noto_sans_bold/: 0-255.pbf  256-511.pbf
frontend/public/OSM/styles/: colorful.json  eclipse.json
frontend/src/: App.css  App.js  App.vue  api.js  geometry.js  main.js  usageCategories.js  usageTypes.js  wikidata.js
frontend/src/components/: ControlsPanel.css  ControlsPanel.js  ControlsPanel.vue  MapView.css  MapView.js  MapView.vue  PermitDetails.css  PermitDetails.js  PermitDetails.vue  Timeline.css  Timeline.js  Timeline.vue
frontend/src/composables/: useMapStyle.js
frontend/src/i18n/: index.js
frontend/src/stores/: filters.js
infra/k8s/: 00-namespace.yaml  10-postgres.yaml  20-backend.yaml  30-cronjobs.yaml  40-ingress.yaml  50-cluster-autoscaler.yaml  worker-cloud-init.yaml
infra/tofu/: cloudflare.tf  main.tf  outputs.tf  variables.tf  versions.tf
infra/tofu/cloud-init/: master.yaml.tftpl
(+5 files in other folders)
