[project]
name = "permits"
version = "1.0.0"
description = "Budapest public-space-use permit ingestion + enrichment API"
readme = "README.md"
requires-python = ">=3.14"  # due to the usage of compression.zstd
license = { text = "GPL-3.0-or-later" }
dependencies = [
    "fastapi==0.138.1",
    "uvicorn[standard]==0.49.0",
    "sqlalchemy[asyncio]==2.0.51",
    "asyncpg==0.31.0",
    "geoalchemy2==0.20.0",
    "shapely==2.1.2",
    "pyproj==3.7.2",
    "alembic==1.18.5",
    "httpx[http2]==0.28.1",
    "tenacity==9.1.4",
    "pydantic-settings==2.14.2",
    "python-dateutil==2.9.0",
    "tqdm==4.68.3",
    "boto3==1.43.36",
]

[project.optional-dependencies]
dev = ["pytest==9.1.1", "pytest-asyncio==1.4.0", "respx==0.23.1", "ruff==0.15.20"]

[project.scripts]
permits-fetch = "permits.fetch:main"

[build-system]
requires = ["setuptools==82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
